refactor xds resource subscription

--- a/dubbo-demo/dubbo-demo-xds/dubbo-demo-xds-provider/src/main/resources/application.yml
+++ b/dubbo-demo/dubbo-demo-xds/dubbo-demo-xds-provider/src/main/resources/application.yml
@@ -26,4 +26,4 @@ dubbo:
     name: tri
     port: 50051
   registry:
-    address: xds://istiod.istio-system.svc:15010?security=plaintext # istio://istiod.istio-system.svc:15012
+    address: xds://47.251.12.148:15010?security=plaintext # istio://istiod.istio-system.svc:15012
