--- a/dubbo-registry/dubbo-registry-api/pom.xml
+++ b/dubbo-registry/dubbo-registry-api/pom.xml
@@ -40,6 +40,12 @@
 
     <dependency>
       <groupId>org.apache.dubbo</groupId>
+      <artifactId>dubbo-cluster</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.dubbo</groupId>
       <artifactId>dubbo-metadata-api</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
