--- a/.github/workflows/build-and-test-pr.yml
+++ b/.github/workflows/build-and-test-pr.yml
@@ -268,6 +268,11 @@ jobs:
         with:
           name: surefire-reports
           path: "**/target/surefire-reports/**"
+      - name: "Upload site reports"
+        uses: actions/upload-artifact@v4
+        with:
+          name: site-reports
+          path: "**/target/site/**"
 
   samples-test-prepare:
     needs: check-format
@@ -480,8 +485,6 @@ jobs:
     needs: [check-format, samples-test-result]
     steps:
       - uses: actions/checkout@v4
-        with:
-          path: "./dubbo"
       - uses: actions/checkout@v4
         with:
           repository: 'apache/dubbo-samples'
@@ -499,7 +502,6 @@ jobs:
           path: ${{ github.workspace }}
       - name: "Unpack class result"
         run: |
-          cd ${{ github.workspace }}/dubbo
           unzip -o ${{ github.workspace }}/class.zip
       - name: "Restore samples jacoco exec"
         uses: actions/download-artifact@v4
@@ -510,11 +512,10 @@ jobs:
       - name: "Merge samples jacoco result"
         run: |
           cd ${{ github.workspace }}/dubbo-samples/test/dubbo-test-jacoco-merger
-          mvn clean compile exec:java -Dexec.mainClass="org.apache.dubbo.test.JacocoReport" -Dexec.args="${{github.workspace}}/dubbo-samples ${{github.workspace}}/dubbo"
+          mvn clean compile exec:java -Dexec.mainClass="org.apache.dubbo.test.JacocoReport" -Dexec.args="${{github.workspace}}/dubbo-samples ${{github.workspace}}"
       - name: "Remove old test result"
         run: |
           rm -rf ${{ github.workspace }}/dubbo-samples
-          mv ${{ github.workspace }}/dubbo/* ${{ github.workspace }}/
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v4
         with:
@@ -529,8 +530,6 @@ jobs:
     needs: [check-format, integration-test-result, samples-test-result]
     steps:
       - uses: actions/checkout@v4
-        with:
-          path: "./dubbo"
       - uses: actions/checkout@v4
         with:
           repository: 'apache/dubbo-integration-cases'
@@ -548,7 +547,6 @@ jobs:
           path: ${{ github.workspace }}
       - name: "Unpack class result"
         run: |
-          cd ${{ github.workspace }}/dubbo
           unzip -o ${{ github.workspace }}/class.zip
       - name: "Restore integration test jacoco exec"
         uses: actions/download-artifact@v4
@@ -559,11 +557,10 @@ jobs:
       - name: "Merge integration test jacoco result"
         run: |
           cd ${{ github.workspace }}/dubbo-integration-cases/test/dubbo-test-jacoco-merger
-          mvn clean compile exec:java -Dexec.mainClass="org.apache.dubbo.test.JacocoReport" -Dexec.args="${{github.workspace}}/dubbo-integration-cases ${{github.workspace}}/dubbo"
+          mvn clean compile exec:java -Dexec.mainClass="org.apache.dubbo.test.JacocoReport" -Dexec.args="${{github.workspace}}/dubbo-integration-cases ${{github.workspace}}"
       - name: "Remove old test result"
         run: |
           rm -rf ${{ github.workspace }}/dubbo-integration-cases
-          mv ${{ github.workspace }}/dubbo/* ${{ github.workspace }}/
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v4
         with:
